# RayTracer2.0

./: .gitignore  README.md  build.sh
project/: BoolNode.cpp  BoolNode.hpp  CMakeLists.txt  GeometryNode.cpp  GeometryNode.hpp  Lego.cpp  Lego.hpp  Main.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Options.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Primitive.cpp  Primitive.hpp  ProcLegoNode.cpp  ProcLegoNode.hpp  README.md  Raytracer  Raytracer.cpp  Raytracer.hpp  SceneNode.cpp  SceneNode.hpp  scene_lua.cpp
project/Assets/: 1x1.lua  ProcLego.lua  chair.lua  couch.lua  csg.lua  lego.lua  nonhier.lua  sample.lua  scene.lua  simple.lua  table.lua  test.lua
